--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ header {
   background-color: var(--black);
   color: var(--white);
   height: 60vh;
-  z-index:2;
+  z-index: 2;
   margin-top: 50px;
   display: flex;
   padding-top: 20px;
@@ -98,7 +98,7 @@ header {
 #closebtn {
   position: absolute;
   font-size: 46px;
-  top: 250px;
+  top: 300px;
   left: 170px;
 }
 
@@ -121,6 +121,7 @@ header {
 
 #main {
   margin-top: 50px;
+  z-index: 1;
 }
 
 #part1 {
@@ -137,7 +138,7 @@ header {
   width: 100%;
   height: 120px;
   position: absolute;
-  top: 100px;
+  top: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -188,29 +189,37 @@ header {
   margin: 5px 0px;
 }
 
+#b3-serv {
+  margin-bottom: 20px;
+}
+
  /* -- MAIN(PART 3) --  */
 
 #part3 {
-  background-image: url(assets/images/image\ 3.png);
+  background-image: url(assets/images/image\ 4.jpg);
   background-repeat: no-repeat;
-  background-size: 100%;
   background-repeat: round;
   text-align: center;
   font-family: var(--font1);
   font-size: 14px;
   padding: 10px 0px;
-
 }
 
 #part3 h1 {
-  margin: 10px 0px;
+  margin: 20px 0px;
 }
 
 #container-ul {
   margin: 0 auto;
   width: 70%;
+  text-align: start;
   font-weight: 600;
+  font-size: 18px;
   padding-bottom: 20px;
+}
+
+#cont-vantagens li {
+  margin-bottom: 20px;
 }
 
  /* -- MAIN(PART 4) --  */
@@ -224,7 +233,7 @@ header {
 }
 
 #part4 h1 {
-  margin: 10px 0px;
+  margin: 30px 0px;
 }
 
 #cont-empresas img {
@@ -235,9 +244,8 @@ header {
  /* -- FORM --  */
 
 #form {
-  background-image: url(assets/images/fundoform2.png);
+  background-image: url(assets/images/fundoform3.jpg);
   background-repeat: no-repeat;
-  background-size: 100%;
   background-repeat: round;
   text-align: center;
   font-family: var(--font1);
