--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
   background-color: var(--white);
 }
 
+body a {
+  text-decoration: none;
+  color: var(--white);
+}
+
 :root {
  --black : #342E37;
  --white : #FAFFFD;
@@ -18,6 +23,7 @@ body {
  --white-full : #fff;
  --font1 : "PT Sans Caption";
  --font2 : "Roboto Mono";
+ --font3 : "Montserrat";
 }
 
  /* -- HEADER --  */
@@ -47,7 +53,7 @@ header {
 }
 
 #left-nav {
-  background-color: var(--blue);
+  background-color: var(--orange);
   text-align: center;
   width: 60px;
   height: 100%;
@@ -57,16 +63,19 @@ header {
 }
 
 #openclosenav {
-  display: none;
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
 }
 
 
 #navmenu {
   background-color: var(--black);
+  filter: opacity(0.98);
   color: var(--white);
-  height: 60vh;
+  height: 90vh;
   z-index: 2;
-  margin-top: 50px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -75,9 +84,17 @@ header {
   position: relative;
 }
 
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
 .navbarsep {
   margin: 0 auto;
-  width: 50%;
+  width: 80%;
   height: 1px;
   background-color: var(--white);
 }
@@ -99,10 +116,6 @@ header {
 #navmenu a:hover {
   background-color: var(--black-full);
   text-decoration: underline;
-}
-
-#closebtn {
-  font-size: 46px; 
 }
 
 #navicon {
@@ -129,18 +142,17 @@ header {
 
 #part1 {
   position: relative;
-}
-
-#fotopredio {
-  width: 100%;
-  max-height: 300px;
+  background-image: url(assets/images/fundoteste3.jpg);
+  background-position: center;
+  background-size: 240%;
+  height: 500px;
 }
 
 #outdoor {
   background-color: var(--white);
   width: 100%;
   height: 120px;
-  position: absolute;
+  position: relative;
   top: 80px;
   display: flex;
   align-items: center;
@@ -165,6 +177,74 @@ header {
   width: 160px;
   height: 2px;
   background-color: var(--black);
+}
+
+#callto {
+  background-color: var(--blue);
+  margin: 0 auto;
+  margin-top: 130px;
+  padding: 20px;
+  border-radius: 10px;
+  box-sizing: border-box;
+  width: 90%;
+  font-family: var(--font1);
+  color: var(--white);
+  position: relative;
+}
+
+#cont-title-callto {
+  width: 70%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#callto h2 {
+  font-size: 18px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+#bar-callto {
+  width: 100%;
+  height: 2px;
+  background-color: var(--white);
+}
+
+#cont-text-callto {
+  margin: 0 auto;
+  width: 90%;
+  margin-top: 10px;
+  margin-bottom: 22px;
+}
+
+#text-callto {
+  text-align: center;
+}
+
+#cont-btn-callto {
+  width: 100%;
+  text-align: center;
+}
+
+#btn-callto {
+  position: absolute;
+  background-color:#f36828;
+  border: none;
+  color: var(--white);
+  padding: 10px 30px;
+  margin-right: auto;
+  margin-left: -70px;
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+#btn-callto:hover {
+  background-color: var(--orange);
+}
+
+#btn-callto:active {
+  transform: scale(0.9);
 }
 
  /* -- MAIN(PART 2) --  */
@@ -192,6 +272,10 @@ header {
   margin: 5px 0px;
 }
 
+#b1-serv, #b2-serv, #b3-serv {
+  margin: 0px 20px;
+}
+
 #b3-serv {
   margin-bottom: 20px;
 }
@@ -199,7 +283,7 @@ header {
  /* -- MAIN(PART 3) --  */
 
 #part3 {
-  background-image: url(assets/images/image\ 4.jpg);
+  background-image: url(assets/images/fundopart3.jpg);
   background-repeat: no-repeat;
   background-repeat: round;
   text-align: center;
@@ -208,27 +292,57 @@ header {
   padding: 10px 0px;
 }
 
-#part3 h1 {
-  margin: 20px 0px;
+#cont-h1 {
+ width: 100%;
+ background-color: var(--green);
+ color: var(--white);
+ margin: 20px 0px;
+ font-size: 14px;
+ box-sizing: border-box;
+ margin-bottom: 50px;
 }
 
-#container-ul {
-  margin: 0 auto;
-  width: 70%;
-  text-align: start;
-  font-weight: 600;
-  font-size: 18px;
-  padding-bottom: 20px;
+#cont-h1 h1 {
+  padding: 20px 5px;
 }
 
-#cont-vantagens li {
-  margin-bottom: 20px;
+#cont-vantagens {
+  overflow: hidden;
+}
+
+.block-part3 {
+  background-color: var(--white);
+  color: var(--black-full);
+  font-family: var(--font3);
+  font-size: 16px;
+  width: 60%;
+  padding: 25px 40px;
+  margin-bottom: 40px;
+  border-radius: 10px;
+  display: flex;
+}
+
+.left-block {
+  margin-left: -10px;
+  text-align: left;
+}
+
+.right-block {
+  margin-left: auto;
+  margin-right: -10px;
+  text-align: right;
+}
+
+.span-bold {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 10px;
 }
 
  /* -- MAIN(PART 4) --  */
 
 #part4 {
-  background-color: var(--green);
+  background-color: var(--white-full);
   text-align: center;
   font-family: var(--font1);
   font-size: 14px;
@@ -236,18 +350,122 @@ header {
 }
 
 #part4 h1 {
-  margin: 30px 0px;
+  margin-top: 30px;
+  padding: 0 20px;
 }
 
-#cont-empresas img {
-  padding: 10px;
-  margin-bottom: 20px;
+ /* -- Carrousel --  */
+#cont-carrousel {
+  height: 500px;
+  margin: 0;
+  display: grid;
+  grid-template-rows: 400px 60px;
+  grid-template-columns: 1fr 30px 30px 30px 30px 30px 1fr;
+  align-items: center;
+  justify-items: center;
+}
+
+main#carousel {
+  grid-row: 1 / 2;
+  grid-column: 1 / 8;
+  width: 100vw;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  transform-style: preserve-3d;
+  perspective: 600px;
+  --items: 5;
+  --middle: 3;
+  --position: 1;
+  pointer-events: none;
+}
+
+div.item {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  background-color: var(--blue);
+  --r: calc(var(--position) - var(--offset));
+  --abs: max(calc(var(--r) * -1), var(--r));
+  transition: all 0.25s linear;
+  transform: rotateY(calc(-10deg * var(--r)))
+    translateX(calc(-300px * var(--r)));
+  z-index: calc((var(--position) - var(--abs)));
+}
+
+div.item:nth-of-type(1) {
+  --offset: 1;
+  background-color: var(--green);
+}
+div.item:nth-of-type(2) {
+  --offset: 2;
+  background-color: var(--orange);
+}
+div.item:nth-of-type(3) {
+  --offset: 3;
+  background-color: var(--blue);
+}
+div.item:nth-of-type(4) {
+  --offset: 4;
+  background-color: var(--green);
+}
+div.item:nth-of-type(5) {
+  --offset: 5;
+  background-color: var(--orange);
+}
+
+input:nth-of-type(1) {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+input:nth-of-type(1):checked ~ main#carousel {
+  --position: 1;
+}
+
+input:nth-of-type(2) {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+}
+input:nth-of-type(2):checked ~ main#carousel {
+  --position: 2;
+}
+
+input:nth-of-type(3) {
+  grid-column: 4 /5;
+  grid-row: 2 / 3;
+}
+input:nth-of-type(3):checked ~ main#carousel {
+  --position: 3;
+}
+
+input:nth-of-type(4) {
+  grid-column: 5 / 6;
+  grid-row: 2 / 3;
+}
+input:nth-of-type(4):checked ~ main#carousel {
+  --position: 4;
+}
+
+input:nth-of-type(5) {
+  grid-column: 6 / 7;
+  grid-row: 2 / 3;
+}
+input:nth-of-type(5):checked ~ main#carousel {
+  --position: 5;
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
  /* -- FORM --  */
 
 #form {
-  background-image: url(assets/images/fundoform3.jpg);
+  background-image: url(assets/images/teste1212.jpg);
   background-repeat: no-repeat;
   background-repeat: round;
   text-align: center;
@@ -268,8 +486,13 @@ header {
 
 #form h1 {
   color: var(--white);
-  text-shadow: 2px 2px 3px var(--black-full);
   margin-bottom: 20px;
+  text-shadow: 1px 1px 3px black;
+}
+
+#form-main {
+  display: flex;
+  flex-direction: column;
 }
 
 #form input {
@@ -277,24 +500,44 @@ header {
   border: none;
   margin-bottom: 15px;
   padding: 5px;
-  box-shadow: 1px 1px 2px var(--black-full);
+  border-radius: 3px;
+  outline: none;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
 }
 
 #form select {
   margin-bottom: 15px;
-  box-shadow: 1px 1px 2px var(--black-full);
+  border-radius: 3px;
+  outline: none;
+  height: 30px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
+}
+
+#form textarea {
+  border-radius: 3px;
+  outline: none;
+  font-family: Arial;
+  padding: 5px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
 }
 
 #btn-enviarform {
   border: none;
   font: var(--font2);
   color: var(--white);
-  background-color: var(--orange);
+  background-color: #f36828;
   padding: 10px;
   margin-top: 20px;
-  box-shadow: 1px 1px 2px var(--black-full);
+  cursor: pointer;
 }
 
+#btn-enviarform:hover {
+  background-color: var(--orange);
+}
+
+#btn-enviarform:active {
+  transform: scale(0.9);
+}
  /* -- FOOTER --  */
 
 footer {
@@ -322,7 +565,16 @@ footer i {
 #footer2 {
   display: none;
 }
+#btn-enviarform {
+  margin-bottom: 30px;
+}
 @media (max-width: 320px) {
+  #part1 {
+    height: 540px;
+  }
+  #form-content h1 {
+    font-size: 32px;
+  }
   footer i {
     padding: 10px;
   }
@@ -354,6 +606,10 @@ footer i {
 }
 
 @media screen and (min-width: 1024px){
+  #container-all {
+    overflow: hidden;
+  }
+  
   #header {
     display: none;
   }
@@ -373,9 +629,10 @@ footer i {
     font-family: var(--font1);
     font-size: 20px;
     padding: 15px 15px;
+    transition: all .1s ease-in-out;
   }
   .linkmenu:hover {
-    background-color: #2e2e2e;
+    background-color: var(--orange);
   }
   #logo {
     margin-left: 40px;
@@ -389,9 +646,19 @@ footer i {
   #wpp {
     font-size: 36px;
     margin-right: 10px;
+    cursor: pointer;
+    transition: all .1s ease-in-out;
   }
+
+  #wpp:hover {
+    transform: scale(1.3);
+  }
+
   #part1 {
-    height: 500px;
+    height: 650px;
+    background-image: url(assets/images/fundoteste3.jpg);
+    background-size: cover;
+    background-position: 1px;
   }
   #fotopredio {
     height: 100%;
@@ -399,7 +666,7 @@ footer i {
   }
   #outdoor {
     height: 200px;
-    top: 140px;
+    top: 90px;
   }
   #mx {
     font-size: 64px;
@@ -411,7 +678,29 @@ footer i {
     font-size: 24px;
     margin-top: 20px;
   }
-  #part2, #part3cont {
+  #callto {
+    margin-top: 160px;
+    width: 50%;
+    height: 200px;
+  }
+  #cont-title-callto h2{
+    font-size: 24px;
+  }
+  #text-callto {
+    font-size: 20px;
+  }
+  #btn-callto {
+    width: 200px;
+    margin-left: -100px;
+  }
+  #part2-flex {
+    display: flex;
+  }
+  #b1-serv, #b2-serv, #b3-serv {
+    width: 100%;
+    margin-top: 50px;
+  }
+  #part2 {
     padding: 30px 0px;
     width: 80%;
     margin: 0 auto;
@@ -420,20 +709,42 @@ footer i {
     margin-top: 10px;
     margin-bottom: 20px;
   }
+  #part3 {
+    margin-top: 30px;
+    background-size: cover;
+  }
   #part3cont h1 {
     margin-bottom: 40px;
+    padding: 40px 0px;
   }
-  #cont-vantagens li {
-    margin-bottom: 40px;
+  .block-part3 {
+    margin-bottom: 70px;
+    width: 60%;
+    transition: all 0.1s ease-in-out;
   }
-  #cont-empresas {
-    height: 300px;
+  .block-part3:hover {
+    background-color: var(--green);
+    color: var(--white);
+  }
+  .left-block {
+    margin: 0 auto;
+    margin-bottom: 60px;
+    margin-top: 20px;
+    text-align: center;
+  }
+  .right-block {
+    margin: 0 auto;
+    margin-bottom: 60px;
+    text-align: center;
   }
   #part4 h1 {
     margin-bottom: 60px;
   }
   #cont-empresas img {
     width: 150px;
+  }
+  #form {
+    background-image: url(assets/images/teste1212.jpg);
   }
   #form h1 {
     font-size: 46px;
@@ -445,9 +756,17 @@ footer i {
   }
   #form-content input {
     height: 40px;
+    font-size: 18px;
   }
   #form-content select {
     height: 40px;
+    font-size: 18px;
+  }
+  #inpt-msg {
+    font-size: 18px;
+  }
+  #btn-enviarform {
+    font-size: 26px;
   }
   footer {
     display: none;
