--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ header {
   background-position: center;
   background-size: 240%;
   height: 500px;
-}
+} 
 
 #outdoor {
   background-color: var(--white);
@@ -223,21 +223,19 @@ header {
 }
 
 #cont-btn-callto {
-  width: 100%;
-  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 #btn-callto {
-  position: absolute;
   background-color:#f36828;
   border: none;
   color: var(--white);
   padding: 10px 30px;
-  margin-right: auto;
-  margin-left: -70px;
   font-weight: bold;
   font-size: 18px;
   cursor: pointer;
+  text-align: center;
 }
 
 #btn-callto:hover {
@@ -257,7 +255,7 @@ header {
 }
 
 #part2 h1 {
-  margin: 10px 0px;
+  margin: 20px 0px;
 }
 
 #part2 h2 {
@@ -723,7 +721,6 @@ footer i {
   }
   #btn-callto {
     width: 200px;
-    margin-left: -100px;
   }
   #part2-flex {
     display: flex;
@@ -735,7 +732,10 @@ footer i {
   #part2 {
     padding: 30px 0px;
     width: 80%;
-    margin: 0 auto;
+    margin: 50px auto;
+  }
+  #part2 h1 {
+    margin-bottom: 20px;
   }
   #part2 h2 {
     margin-top: 10px;
@@ -743,6 +743,7 @@ footer i {
   }
   #part3 {
     margin-top: 30px;
+    padding: 50px 0px;
     background-size: cover;
   }
   #part3cont h1 {
@@ -772,13 +773,18 @@ footer i {
     margin-bottom: 60px;
     text-align: center;
   }
+  #part4 {
+    padding: 50px 0px;
+  }
   #part4 h1 {
     margin-bottom: 60px;
   }
   #cont-empresas img {
     width: 150px;
   }
-
+  #form {
+    padding: 70px 0px;
+  }
   #form-content {
     width: 800px;
   }
@@ -801,4 +807,9 @@ footer i {
   #footer-icons2 {
     margin-bottom: -20px;
   }
+}
+@media only screen and (min-device-width: 1024px) and (max-device-width: 1339px) {
+ #cont-btn-callto {
+   margin-top: -15px;
+ }
 }
