--- a/style.css
+++ b/style.css
@@ -145,15 +145,15 @@ header {
   background-image: url(assets/images/fundoteste3.jpg);
   background-position: center;
   background-size: 240%;
-  height: 500px;
+  height: 540px;
 } 
 
 #outdoor {
   background-color: var(--white);
   width: 100%;
-  height: 120px;
+  height: 140px;
   position: relative;
-  top: 80px;
+  top: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -612,7 +612,7 @@ footer i {
 }
 @media (max-width: 320px) {
   #part1 {
-    height: 540px;
+    height: 560px;
   }
   footer i {
     padding: 10px;
@@ -745,22 +745,39 @@ footer i {
     margin-top: 30px;
     padding: 50px 0px;
     background-size: cover;
+    height: 800px;
+  }
+  #part3cont {
+    width: 100%;
   }
   #part3cont h1 {
     margin-bottom: 40px;
     padding: 40px 0px;
   }
+  #cont-h1 {
+    margin-top:40px;
+  }
+  #cont-vantagens {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 80px;
+  }
   .block-part3 {
     margin-bottom: 70px;
     width: 60%;
-    transition: all 0.1s ease-in-out;
+    transition: all 0.3s ease-in-out;
   }
   .block-part3:hover {
     background-color: var(--green);
     color: var(--white);
+    transform: scale(1.2);
   }
   .txt-blockp3{
     margin: 0 auto;
+    font-family: var(--font3);
+    font-size: 18px;
   }
   .left-block {
     margin: 0 auto;
